# mmc

./: .gitignore  .travis.yml  README  README.md  backuppc.sql  feed_reporting.py  import_from_file.php  run-tests.sh
mds/: .gitignore  ChangeLog  Makefile  Makefile.am  autogen.sh  build_sdist.sh  bump.sh  clean.sh  common.mk  configure.ac  diff  mds-2.5.95.tar.gz.md5
mds/agent/: Changelog  Makefile  Makefile.am  setup.py
mds/agent/conf/: Makefile.am
mds/agent/conf/plugins/: Makefile.am  mail.ini  network.ini  network.ini.in  samba.ini  samba.ini.in  samba4.ini.in  shorewall.ini  squid.ini  sshlpk.ini  userquota.ini
mds/agent/contrib/: Makefile.am
mds/agent/contrib/mail/: mail.schema
mds/agent/contrib/network/: named.conf
mds/agent/contrib/radius/: radius.schema
mds/agent/contrib/samba/: smb.conf
mds/agent/contrib/squid/: squid.conf  squid.conf.debian  squid.conf.mandriva
mds/agent/contrib/userquota/: applyquotas.sh
mds/agent/contrib/userquota/networkquota_example/: applyTCrules.py  setupTCrules.sh  tc-showstatus.sh  tcexample.txt  tcruleadd.sh  tcruledel.sh  tcrules.txt
mds/agent/mmc/: Makefile.am
mds/agent/mmc/plugins/bulkimport/: __init__.py
mds/agent/mmc/plugins/mail/: __init__.py  audit.py
mds/agent/mmc/plugins/network/: __init__.py  audit.py  dhcp.py  dns.py  tools.py
mds/agent/mmc/plugins/proxy/: __init__.py  audit.py
mds/agent/mmc/plugins/radius/: __init__.py
mds/agent/mmc/plugins/samba/: __init__.py  audit.py  config.py  log.py  panel.py  smb_conf.py  smb_ldap.py
mds/agent/mmc/plugins/samba4/: __init__.py  audit.py  config.py  helpers.py  samba.py  samba4.py  signals.py  smb_conf.py
mds/agent/mmc/plugins/shorewall/: __init__.py  config.py  io.py
mds/agent/mmc/plugins/squid/: __init__.py  audit.py
mds/agent/mmc/plugins/sshlpk/: __init__.py
mds/agent/mmc/plugins/userquota/: __init__.py
mds/agent/tests-mds/: basetest.ini  sambatest.ini  testldap.py  testmail.py  testproxy.py  testsamba.py  testuserquota.py  userquotatest.ini
mds/doc/: Makefile  linboxify  mandrify  param.html.xsl
mds/doc/LDS-EP/: ldsep-0004-lds-new-release-procedure.xml  ldsep-0005-lmc-web-interface-translation.xml
mds/doc/LMC/conf/en/: lmc-agent-configuration-file.xml  lmc-python-plugin-base-configuration.xml  lmc-python-plugin-mail-configuration.xml  lmc-python-plugin-network-configuration.xml  lmc-python-plugin-samba-configuration.xml  lmc-web-configuration-file.xml
mds/doc/LMC/devel/en/: mmc-devel.xml
mds/doc/LMC/devel/fr/: lmc_documentation.xml
mds/doc/LMC/install/en/: lmc-generic-installation.xml
mds/doc/LMC/install/fr/: lmc-on-centos.xml  (+2 more)
mds/doc/MDS-EP/: README  ldsep-0002-lds-style-guide-for-python-code.xml  ldsep-0004-lds-new-release-procedure.xml  ldsep-template.xml  mdsep-0002-mds-style-guide-for-python-code.xml  mdsep-0003-mds-style-guide-for-php-code.xml  mdsep-0004-mds-new-release-procedure.xml  mdsep-0005-mmc-web-interface-translation.xml  mdsep-0006-mmc-audit-framework.xml  mdsep-0007-mmc-core-new-release-procedure.xml
mds/doc/MDS-EP/img/: audit-database-schema.dia
mds/s4sync/: Makefile.am  __init__.py  credentials.py  k5key_asn1.py  s4sync  s4sync.py  s4sync.service  sync.py
mds/s4sync/tests/: test_credentials.py
mds/scripts/: install.sh  uninstall.sh
mds/tests/: Makefile.am
mds/tests/scripts/: Makefile.am  bootstrap.sh  install.sh  prepare-for-selenium-tests.sh  uninstall.sh
mds/tests/selenium/: Makefile.am
mds/tests/selenium/suite/: all_tests.html
mds/web/: Changelog  Makefile  Makefile.am
mds/web/mail/: infoPackage.inc.php
mds/web/mail/includes/: mail-xmlrpc.php  publicFunc.php
mds/web/mail/mail/: add.php  ajaxDomainFilter.php  ajaxFilter.php  delete.php  edit.php  index.php  localSidebar.php  members.php
mds/web/modules/: Makefile.am
mds/web/modules/bulkimport/: Makefile.am  infoPackage.inc.php
mds/web/modules/mail/: Makefile.am  infoPackage.inc.php  mainSidebar.php
mds/web/modules/network/: Makefile.am  infoPackage.inc.php
mds/web/modules/proxy/: Makefile.am  README  infoPackage.inc.php  localCss.php
mds/web/modules/radius/: Makefile.am  infoPackage.inc.php
mds/web/modules/samba/: Makefile.am  infoPackage.inc.php  mainSidebar.php
mds/web/modules/samba4/: Makefile.am  infoPackage.inc.php  mainSidebar.php
mds/web/modules/shorewall/: Makefile.am  infoPackage.inc.php
mds/web/modules/squid/: Makefile.am  infoPackage.inc.php  localCss.php
mds/web/modules/sshlpk/: Makefile.am  infoPackage.inc.php
mds/web/modules/userquota/: Makefile.am  infoPackage.inc.php
mds/web/network/: infoPackage.inc.php
mds/web/network/dhcplogview/: ajax_showlog.php  index.php
mds/web/network/dnslogview/: ajax_showlog.php  index.php
mds/web/network/includes/: network-xmlrpc.inc.php  network.inc.php
mds/web/network/network/: addhost.php  ajaxDhcpGetSubnetFreeIp.php  ajaxDnsGetZoneFreeIp.php  ajaxSubnetFilter.php  ajaxSubnetMembersFilter.php  ajaxZoneFilter.php  ajaxZoneMembersFilter.php  delete.php  deletehost.php  edit.php  edithost.php  index.php  localSidebar.php  servicelog.php  servicereload.php  servicerestart.php  services.php  servicestart.php  servicestop.php  subnetadd.php  subnetdelete.php  subnetdeletehost.php  subnetedit.php  subnetedithost.php  subnetindex.php  subnetmembers.php  zonemembers.php
mds/web/proxy/: infoPackage.inc.php  localCss.php
mds/web/proxy/blacklist/: add.php  delete.php  index.php  localSidebar.php  restart.php  statut.php
mds/web/proxy/includes/: config.inc.php  proxy-unix.inc.php  proxy-xmlrpc.inc.php  proxy.inc.php
mds/web/samba/: infoPackage.inc.php  mainSidebar.php
mds/web/samba/config/: index.php  restart.php
mds/web/samba/includes/: errorHandling.php  machines-xmlrpc.inc.php  machines.inc.php  publicFunc.php  samba.inc.php  shares.inc.php  user-xmlrpc.inc.php
mds/web/samba/machines/: add.php  ajaxFilter.php  delete.php  index.php  localSidebar.php
mds/web/samba/shares/: add.php  backup.php  delete.php  details.php  index.php  localSidebar.php
mds/web/samba/status/: index.php
mds/web/samba/views/: groups.tpl.php
mds/web/scripts/: build_pot.sh
(+904 files in other folders)
