contribdir = $(datadir)/doc/mmc/contrib

nobase_contrib_DATA = bind/named.conf \
						dhcpd/dhcpd.conf \
						postfix/no-virtual-domain/ldap-aliases.cf \
						postfix/no-virtual-domain/ldap-valiases.cf \
						postfix/no-virtual-domain/main.cf \
						postfix/with-virtual-domains/ldap-accounts.cf \
						postfix/with-virtual-domains/ldap-aliases.cf \
						postfix/with-virtual-domains/ldap-domains.cf \
						postfix/with-virtual-domains/ldap-gid.cf \
						postfix/with-virtual-domains/ldap-maildrop.cf \
						postfix/with-virtual-domains/ldap-transport.cf \
						postfix/with-virtual-domains/ldap-uid.cf \
						postfix/with-virtual-domains/ldap-valiases.cf \
						postfix/with-virtual-domains/main.cf \
						proxy/squidGuard.conf \
						samba/smb.conf \
						userquota/applyquotas.sh \
						userquota/networkquota_example/setupTCrules.sh \
						userquota/networkquota_example/tc-showstatus.sh \
						userquota/networkquota_example/tcexample.txt \
						userquota/networkquota_example/tcruleadd.sh \
						userquota/networkquota_example/tcruledel.sh \
						userquota/networkquota_example/tcrules.txt \
						userquota/networkquota_example/applyTCrules.py \
						squid/squid.conf.debian \
						squid/squid.conf.mandriva
