contribdir = $(datadir)/doc/mmc/contrib

nobase_contrib_DATA = proxy/squidGuard.conf \
	samba/smb.conf \
	samba/samba.schema \
	samba/slapd.conf.samba \
	userquota/applyquotas.sh \
	userquota/networkquota_example/setupTCrules.sh \
	userquota/networkquota_example/tc-showstatus.sh \
	userquota/networkquota_example/tcexample.txt \
	userquota/networkquota_example/tcruleadd.sh \
	userquota/networkquota_example/tcruledel.sh \
	userquota/networkquota_example/tcrules.txt \
	userquota/networkquota_example/applyTCrules.py \
	userquota/quota.schema \
	userquota/slapd.conf.userquota \
	squid/squid.conf.debian \
	squid/squid.conf.mandriva \
	mail/zarafa.schema \
	mail/postfix/no-virtual-domain/ldap-aliases.cf \
	mail/postfix/no-virtual-domain/ldap-valiases.cf \
	mail/postfix/no-virtual-domain/main.cf \
	mail/postfix/with-virtual-domains/ldap-accounts.cf \
	mail/postfix/with-virtual-domains/ldap-aliases.cf \
	mail/postfix/with-virtual-domains/ldap-domains.cf \
	mail/postfix/with-virtual-domains/ldap-gid.cf \
	mail/postfix/with-virtual-domains/ldap-maildrop.cf \
	mail/postfix/with-virtual-domains/ldap-transport.cf \
	mail/postfix/with-virtual-domains/ldap-uid.cf \
	mail/postfix/with-virtual-domains/ldap-valiases.cf \
	mail/postfix/with-virtual-domains/main.cf \
	mail/mail.schema \
	sshlpk/openssh-lpk.schema \
	network/dnszone.schema \
	network/named.conf \
	network/dhcpd.conf \
	network/dhcp.schema
